--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Calculadora de médias</title>
 </head>
 <body>
-    
+    <h1>Digite três números para calcularmos a média:</h1>
 </body>
 </html>
