--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Digite três números para calcularmos a média:</h1>
+    <input type="number" id="a">
+    <input type="number" id="b">
+    <input type="number" id="c">
+    <button type="submit">Adicionar+</button>
 </body>
 </html>
