--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Calculadora de médias</title>
 </head>
 <body>
     <h1>Digite três números para calcularmos a média:</h1>
+    <form id="form">
     <input type="number" id="a">
     <input type="number" id="b">
     <input type="number" id="c">
-    <button type="submit">Adicionar+</button>
+    <button onclick="obterMedia">
+        Calcular média
+    </button>
+    <div id="resultado"></div>
+</form>
 </body>
 </html>
