--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <input type="number" id="a">
     <input type="number" id="b">
     <input type="number" id="c">
-    <button onclick="obterMedia">
+    <button onclick="obterMedia()">
         Calcular média
     </button>
-    <div id="resultado"></div>
+    <div id="resultado">
+        Resultado:
+    </div>
 </form>
+<script src="./main.js"></script>
 </body>
 </html>
